Fix #Shell diagram css layout  on narrow screens

--- a/public/Layout.css
+++ b/public/Layout.css
@@ -5,8 +5,21 @@
 
 body {
     font-family: 'EB Garamond', serif;
-    padding-top: 12rem;
+    padding-top: 8rem;
 }
+
+main {
+    margin-top: -6rem;
+}
+
+main>:first-child {
+    position  : relative;
+    top       : -3rem;
+    text-align: right;
+}
+
+
+
 
 @media only screen and (min-width: 481px) {
     :root {
@@ -123,11 +136,4 @@ pre {
 body {
     image-rendering    : pixelated;
     overscroll-behavior: none;
-}
-
-img[alt=icon] {
-    max-width: 10rem;
-    float    : right;
-    inset    : -5rem auto auto -2rem;
-    position : relative;
 }
